--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,9 +34,16 @@ spring.datasource.hikari.maxLifeTime : 600000
 spring.main.allow-circular-references=true
 
 todolist.app.jwtSecret= AlexDenDimSecurityKey
+todolist.app.jwtRefreshSecret= RefreshSecret
 todolist.app.jwtExpirationMs= 15120000
 todolist.app.jwtRefreshExpirationMs= 29880
-todolist.app.jwtCookieName=AlexDenDim
+todolist.app.jwtCookieName=refresh
 
-server.port=8080
+server.port=8843
+# The format used for the keystore. It could be set to JKS in case it is a JKS file
+server.ssl.enabled=true
+server.ssl.key-store: src/main/resources/todolist.p12
+server.ssl.key-store-password: password
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: todolist
 
