осталось только делиться листом

--- a/pom.xml
+++ b/pom.xml
@@ -98,8 +98,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 
 	<build>
