--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,8 +35,8 @@ spring.main.allow-circular-references=true
 
 todolist.app.jwtSecret= AlexDenDimSecurityKey
 todolist.app.jwtRefreshSecret= RefreshSecret
-todolist.app.jwtExpirationMs= 3000000
-todolist.app.jwtRefreshExpirationMs= 3000000
+todolist.app.jwtExpirationMs= 900000
+todolist.app.jwtRefreshExpirationMs= 1296000000
 todolist.app.jwtCookieName=refresh
 
 server.port=8843
