--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/todolist?serverTimezone=Europe/Moscow
+spring.datasource.url = jdbc:${SPRING_DATASOURCE_URL:mysql://localhost:3306/todolist?serverTimezone=Europe/Moscow}
 
 # Username and secret
-spring.datasource.username = root
-spring.datasource.password =root
+spring.datasource.username = ${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password =${SPRING_DATASOURCE_PASSWORD:root}
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
