--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,7 +39,7 @@ todolist.app.jwtExpirationMs= 900000
 todolist.app.jwtRefreshExpirationMs= 1296000000
 todolist.app.jwtCookieName=refresh
 
-server.port=8843
+server.port=${PORT:8843}
 # The format used for the keystore. It could be set to JKS in case it is a JKS file
 server.ssl.enabled=true
 server.ssl.key-store: src/main/resources/todolist.p12
