--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url = jdbc:${SPRING_DATASOURCE_URL:mysql://localhost:3306/todolist?serverTimezone=Europe/Moscow}
+spring.datasource.url = jdbc::mysql://localhost:3306/todolist?serverTimezone=Europe/Moscow
 
 # Username and secret
-spring.datasource.username = ${SPRING_DATASOURCE_USERNAME:root}
-spring.datasource.password =${SPRING_DATASOURCE_PASSWORD:root}
+spring.datasource.username = root
+spring.datasource.password =root
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
@@ -39,9 +39,9 @@ todolist.app.jwtExpirationMs= 900000
 todolist.app.jwtRefreshExpirationMs= 1296000000
 todolist.app.jwtCookieName=refresh
 
-server.port=${PORT:8843}
+server.port=${PORT:8081}
 # The format used for the keystore. It could be set to JKS in case it is a JKS file
-server.ssl.enabled=true
+server.ssl.enabled=false
 server.ssl.key-store: src/main/resources/todolist.p12
 server.ssl.key-store-password: password
 server.ssl.keyStoreType: PKCS12
