--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc::mysql://localhost:3306/todolist?serverTimezone=Europe/Moscow
+spring.datasource.url = jdbc:${CLEARDB_DATABASE_URL:mysql://localhost:3306/todolist?serverTimezone=Europe/Moscow
 
 # Username and secret
 spring.datasource.username = root
